Avoid scrollbar in silder

--- a/themes/client/html/default/aimeos.css
+++ b/themes/client/html/default/aimeos.css
@@ -103,6 +103,10 @@ img {
 	margin: 4rem 0;
 }
 
+.aimeos .swiffy-slider .slider-container {
+	overflow-x: unset;
+}
+
 .aimeos .btn {
 	width: 12rem;
 	vertical-align: top;
